[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1"]

[node name="Enemy" type="HBoxContainer"]
script = ExtResource("1")
size_flags_horizontal = 0
size_flags_vertical = 0
separation = 12

[node name="Sprite" type="TextureRect" parent="."]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
separation = 4

[node name="NameLabel" type="Label" parent="Info"]
layout_mode = 2
text = "Enemy Name"

[node name="HealthLabel" type="Label" parent="Info"]
layout_mode = 2
text = "HP 30"

[node name="IntentLabel" type="Label" parent="Info"]
layout_mode = 2
text = "(Attack 6)"
